# fl-deep-tensors

./: README.md  pyproject.toml
deep_tensors/app/: prepare_car_dataset.py
deep_tensors/cars/: car_regression.py
deep_tensors/infra/: cars_mpg.py  tensorflow_datasets.py
deep_tensors/models/: model_builder.py  neuralnet.py  schemas.py
deep_tensors/xor/: xor_classifier.py
scripts/: car_mpg_regression.py  xor_random_classification.py
test/app/: test_prepare_car_dataset.py
test/infra/: test_infra_cars_mpg.py  test_tensorflow_datasets.py
test/models/: test_model_builder.py  test_neuralnet.py
test/usecases/: test_car_regression.py  test_xor_classifier.py
