[build-system]
requires = ["setuptools >= 69.0", "wheel"]
build_backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["deep_tensors"]

[project]
name = "fl-deep-tensors"
requires-python = ">= 3.10"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "Cython",
    "scikit-learn",
    "tensorflow",
    "keras",
    "h5py",
    "tables",
    "Pillow",
    "opencv-python",
    "gensim",
    "click",
    "pyprind",
    "nltk",
    "mlxtend",
    "tensorflow-datasets",
    "pydantic",
    "tensorrt",
]
